# ORIS_AI_Engine

./: CMakeLists.txt  LICENSE  README.md
cmake/: Packages.cmake  findCUDA.cmake
cmake/Modules/: FindGlog.cmake  FindOpenBLAS.cmake
include/oris_ai/accelerator/cuda/: cublas_manager.h  cuda_define.h  cuda_functions.h  cuda_stream_manager.h
include/oris_ai/accelerator/cuda/int8/: cuda_functions_int8.h
include/oris_ai/accelerator/cudnn/: cudnn_manager.h
include/oris_ai/common/: cuda_define.h  cuda_stream_manager.h  tensor.h
include/oris_ai/layer/: base_convolution.h  concat.h  convolution.h  convolution_transpose.h  depthwise_convolution.h  elementwise.h  layer.h  layer_factory.h  matmul.h  maxpooling.h  permute.h  softmax.h  split.h  transpose.h  upsample.h
include/oris_ai/layer/cpu/: concat_cpu.h  convolution_cpu.h  convolution_transpose_cpu.h  depthwise_convolution_cpu.h  elementwise_cpu.h  matmul_cpu.h  maxpooling_cpu.h  permute_cpu.h  softmax_cpu.h  split_cpu.h  transpose_cpu.h  upsample_cpu.h
include/oris_ai/layer/custom/: attention.h  bottleneck.h  c2f.h  c2psa.h  c3k.h  c3k2.h  decode_bboxes.h  detectfeaturemap.h  dfl.h  inverted_residual.h  mobilenet_block.h  proto.h  psablock.h  sppf.h  yolo_detect.h  yolo_segment.h  yolov8_detect.h
include/oris_ai/layer/custom/cpu/: decode_bboxes_cpu.h  dfl_cpu.h
include/oris_ai/layer/custom/nvidia_gpu/: decode_bboxes_gpu.h  dfl_gpu.h
include/oris_ai/layer/int8/: concat_gpu_int8.h  concat_int8.h  convolution_int8.h  convolution_int8_cudnn_frontend.h  dequant_int8.h  padding_int8.h  split_int8.h
include/oris_ai/layer/int8/_bak_conv/: convolution_int8.h  convolution_int8_cudnn_frontend.h
include/oris_ai/layer/int8/custom/: bottleneck_int8.h  sppf_int8.h
include/oris_ai/layer/nvidia_gpu/: concat_gpu.h  convolution_gpu.h  convolution_transpose_gpu.h  depthwise_convolution_gpu.h  elementwise_gpu.h  matmul_gpu.h  maxpooling_gpu.h  softmax_gpu.h  split_gpu.h  transpose_gpu.h  upsample_gpu.h
include/oris_ai/model/: common_helper.h  model.h  task_type.h  yolo_base.h
include/oris_ai/model/int8/: model_int8.h
include/oris_ai/model/yolov11/: yolov11.h  yolov11_helper.h
include/oris_ai/model/yolov8/: mobilenet_yolov8.h  yolov8.h  yolov8_helper.h  yolov8_result.h  yolov8_type.h  yolov8n.h
include/oris_ai/model/yolov8/int8/: yolov8_int8.h
include/oris_ai/oss/: oss_helper.h
include/oris_ai/protobuf/: oris_ai_model.pb.h  oris_ai_yolov8.pb.h
include/oris_ai/tensor/: tensor.h
include/oris_ai/tensor/int8/: tensor_int8.h
src/oris_ai/examples/: test_input_tensor.cc  test_operator_overloading.cc  test_protobuf.cc  test_tensor.cc  test_tensor_basic.cc  test_tensor_permute.cc  test_yolo_v11.cc  test_yolo_v11_seg.cc  test_yolo_v8.cc  test_yolo_v8_seg.cc
